{
  "version": 4,
  "terraform_version": "0.12.1",
  "serial": 81,
  "lineage": "40069b68-13f2-36f5-333c-13a7e50936c8",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ins-1",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07a0c6e669965bb7c",
            "arn": "arn:aws:ec2:us-west-2:843531873792:instance/i-0ca4e54ccd9f71e46",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0ca4e54ccd9f71e46",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraformkey",
            "monitoring": false,
            "primary_network_interface_id": "eni-07dba4dc83bbdd9b6",
            "private_dns": "ip-10-0-1-236.us-west-2.compute.internal",
            "private_ip": "10.0.1.236",
            "public_ip": "34.221.144.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0a08c9434ef97248c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-024df2204e2500a9d",
            "tags": {
              "Name": "mymachine-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0431f0ea2f895ad4c"
            ]
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07a0c6e669965bb7c",
            "arn": "arn:aws:ec2:us-west-2:843531873792:instance/i-0ee32a37d1b9317a8",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0ee32a37d1b9317a8",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraformkey",
            "monitoring": false,
            "primary_network_interface_id": "eni-00b8fb43a7f9abff4",
            "private_dns": "ip-10-0-1-204.us-west-2.compute.internal",
            "private_ip": "10.0.1.204",
            "public_ip": "54.202.153.26",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0aa2339c00c1e1bbe",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-024df2204e2500a9d",
            "tags": {
              "Name": "mymachine-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0431f0ea2f895ad4c"
            ]
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_ig",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0c26027cb1e45feda",
            "owner_id": "843531873792",
            "vpc_id": "vpc-0c3f723ba97839c8a"
          },
          "depends_on": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateroute",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-044c3537827ccbd73",
            "owner_id": "843531873792",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "privateroute"
            },
            "vpc_id": "vpc-0c3f723ba97839c8a"
          },
          "depends_on": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicroute",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07fa1d1b637f02df8",
            "owner_id": "843531873792",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c26027cb1e45feda",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publicroute"
            },
            "vpc_id": "vpc-0c3f723ba97839c8a"
          },
          "depends_on": [
            "aws_internet_gateway.vpc_ig",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateassociation",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b1a0b4b8d5a1b7c",
            "route_table_id": "rtb-044c3537827ccbd73",
            "subnet_id": "subnet-092b6662af4afa951"
          },
          "depends_on": [
            "aws_route_table.privateroute",
            "aws_subnet.privatesubnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicassociation",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058595094d343ad68",
            "route_table_id": "rtb-07fa1d1b637f02df8",
            "subnet_id": "subnet-024df2204e2500a9d"
          },
          "depends_on": [
            "aws_route_table.publicroute",
            "aws_subnet.publicsubnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:843531873792:subnet/subnet-092b6662af4afa951",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-092b6662af4afa951",
            "map_public_ip_on_launch": false,
            "owner_id": "843531873792",
            "vpc_id": "vpc-0c3f723ba97839c8a"
          },
          "depends_on": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:843531873792:subnet/subnet-024df2204e2500a9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-024df2204e2500a9d",
            "map_public_ip_on_launch": true,
            "owner_id": "843531873792",
            "vpc_id": "vpc-0c3f723ba97839c8a"
          },
          "depends_on": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:843531873792:vpc/vpc-0c3f723ba97839c8a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f4ffcb58f28e80d9",
            "default_route_table_id": "rtb-0faeda56e87a97104",
            "default_security_group_id": "sg-0431f0ea2f895ad4c",
            "dhcp_options_id": "dopt-82d479fa",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c3f723ba97839c8a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0faeda56e87a97104",
            "owner_id": "843531873792",
            "tags": {
              "Name": "myvpc"
            }
          }
        }
      ]
    }
  ]
}